# Algo-Trading

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CRYPTOCURRENCY_CORRELATION_GUIDE.md  LICENSE  Makefile  PROJECT_SUMMARY.txt  README.md  STRATEGY_OPTIMIZATION_SUMMARY.md  cspell.json  dashboard.html  dashboard.py  dashboard_server.py  demo_data_collection.py  demo_trading_system.py  env.example  inst.md  pyproject.toml  requirements.txt  test_llm_comprehensive.py  test_llm_simple.py
.github/workflows/: ci.yml
configs/: __init__.py  base.py  base.yaml  broker.live.yaml  broker.paper.yaml  broker.sim.yaml  costs.sim.yaml  data.history.yaml  data.yaml  data_history.py  features.py  features.yaml  llm.policy.yaml  llm.yaml  ml.yaml  risk.default.yaml  strategy.default.yaml  trading_config.yaml
docs/: DATA_COLLECTION_SETUP.md  ORGANIZATION_SUMMARY.md  README.md
docs/architecture/: README.md
docs/runbooks/: data_collection.md  feature_engineering.md  troubleshooting.md
reports/: dashboard.html
reports/backtest/: equity_4d251958-34e5-420e-a503-30eb8440a269.csv  equity_6e653491-60d8-4585-9dc5-e684a96b8b51.csv  equity_75b0e54c-d401-4b17-b45f-a5ec6a90fd38.csv  equity_7a089ccd-5a36-4e83-bf83-95b51c853cdb.csv  equity_7dac834f-0ecb-481b-ba4f-5f30d7680858.csv  equity_d01ec80c-81d1-4650-8998-396ced1f9e73.csv  equity_d9896333-4403-4e40-bd86-a324418a92a6.csv  equity_ed38a99c-2ee8-4fb4-ba2d-5fac885a2e89.csv  equity_ed4a1d4c-1619-417f-b46c-853761da4a43.csv  equity_f4db76da-b868-4f74-841e-eb2ebc558935.csv  summary_0f6daf23-e7e8-4e76-8e67-72c2c3db5342.json  summary_6e653491-60d8-4585-9dc5-e684a96b8b51.json  summary_75b0e54c-d401-4b17-b45f-a5ec6a90fd38.json  summary_7a089ccd-5a36-4e83-bf83-95b51c853cdb.json  summary_7dac834f-0ecb-481b-ba4f-5f30d7680858.json  summary_d01ec80c-81d1-4650-8998-396ced1f9e73.json  summary_d9896333-4403-4e40-bd86-a324418a92a6.json  summary_ed38a99c-2ee8-4fb4-ba2d-5fac885a2e89.json  summary_ed4a1d4c-1619-417f-b46c-853761da4a43.json  summary_f4db76da-b868-4f74-841e-eb2ebc558935.json  trades_6e653491-60d8-4585-9dc5-e684a96b8b51.csv  trades_75b0e54c-d401-4b17-b45f-a5ec6a90fd38.csv  trades_7a089ccd-5a36-4e83-bf83-95b51c853cdb.csv  trades_7dac834f-0ecb-481b-ba4f-5f30d7680858.csv  trades_d01ec80c-81d1-4650-8998-396ced1f9e73.csv  trades_d9896333-4403-4e40-bd86-a324418a92a6.csv  trades_ed38a99c-2ee8-4fb4-ba2d-5fac885a2e89.csv  trades_ed4a1d4c-1619-417f-b46c-853761da4a43.csv  trades_f4db76da-b868-4f74-841e-eb2ebc558935.csv
reports/backtest_analysis/: 57217ba9_enhanced_equity.csv  57217ba9_summary.json
reports/features/: analysis_summary.json  feature_correlations.csv  feature_statistics.csv  feature_variance.csv
reports/optimization/: optimization_report_20250829_152504.json  optimization_report_20250829_184139.json
reports/tests/: test_results_20250830_234900.json  test_results_20250830_234919.json  test_results_20250830_235029.json  test_results_20250830_235923.json  test_results_20250831_002132.json  test_results_20250831_002625.json  test_results_20250831_003211.json  test_results_20250831_003832.json  test_results_20250831_012905.json
scripts/: bulk_historical_collection.py  collect_top10_crypto.py  comprehensive_trading_agent.py  demo_correlation_system.py  demo_trading_engine.py  download_binance_csv.py  feature_engineering.py  fetch_binance_rest.py  generate_visual_results.py  normalize_data.py  quick_correlation_results.py  run_data_collection.py  test_backtesting.py  test_correlation_analysis.py  test_enhanced_backtesting.py  test_enhanced_strategy.py  test_real_data.py  test_scenarios.py  test_setup.py  test_ultra_aggressive.py  test_ultra_enhanced_strategy.py
src/: __init__.py  main.py
src/adapters/: __init__.py
src/adapters/data/: __init__.py  base.py  binance.py  enhanced_manager.py  manager.py
src/analytics/: correlation_analyzer.py
src/api/: __init__.py  backtest_api.py  data_api.py  features_api.py  server.py  system_api.py  system_api_refactored.py
src/app/: main.py
src/cli/: __init__.py  backtesting.py  data_collection.py  feature_engineering.py  llm_monitor.py  ml_training.py  system.py  test_llm.py  trading_agent.py  trading_analysis.py
src/config/: __init__.py  base.py  base.yaml  crypto_symbols.py  data.history.yaml  data_history.py  features.py  strategy_config.py  trading_config.py
src/core/: __init__.py
src/core/backtest/: engine.py
src/core/backtesting/: engine.py  (+2 more)
src/data/: __init__.py  collector.py  exchanges.py  models.py  storage.py
src/llm/: README.md  __init__.py  rag_trading_knowledge.py
src/ml/: __init__.py  models.py
src/models/: __init__.py  features.py  market_data.py  performance.py  signals.py
src/reporting/: __init__.py  generator.py
src/trading/: __init__.py  bot.py  engine.py  portfolio.py  risk.py  strategies.py
src/utils/: __init__.py  config.py  error_handling.py  file_ops.py  logging.py  time_utils.py  validation.py
tests/: __init__.py  test_core_features.py  test_data_models.py  test_feature_engineering.py  test_features.py  test_trading_engine.py  test_trading_system.py  test_validators.py
(+43 files in other folders)
